--- a/index.html
+++ b/index.html
@@ -1,23 +1,31 @@
 <!DOCTYPE html>
+
 <html lang="en">
+
 <head>
+
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Desserts For Andrey</title>
+
 </head>
+
 <body>
+
   <h1>Desserts For Odin Developers</h1>
-  <p><h3>But especially for <em>Andrey</em>...</h3>...whose  inspired me to become a <em>developer</em> to be closer to his world, his mind...</p>
-  <p>We <em>all</em> have <em>sweet</em> cravings. But our sedentary worklife makes refined sugar our enemy!</p>
+
+  <p><h3>But especially for <em>Andrey</em>...</h3>
+    ...who has inspired me to become a <em>developer</em> to be closer to his world, his mind.</p>
+  <p>We <em>all</em> have <em>sweet</em> cravings. But the sedentary worklife of developers makes refined sugar our enemy!</p>
   <p>I hope these no-refined sugar, natural ingredient and easy-to-make deserts will be useful to the computing tribe!</p>
-  <a href="/home/nillynil/repos/odin-recipes/recipes/LemonNiceCream.html">Lemon Nice-Cream</a>
+  <a href="/home/nillynil/repos/odin-recipes/recipes/LemonNiceCream.html" target="_blank" rel="noopener noreferrer">Lemon Nice-Cream</a>
   <br>
-  <a href="/home/nillynil/repos/odin-recipes/recipes/StrawberryNiceCream.html">Strawberry Nice-Cream</a>
+  <a href="/home/nillynil/repos/odin-recipes/recipes/StrawberryNiceCream.html" target="_blank" rel="noopener noreferrer">Strawberry Nice-Cream</a>
   <br>
-  <a href="/home/nillynil/repos/odin-recipes/recipes/AvocadoChocolatePudding.html">Avocado Chocolate Pudding</a>
+  <a href="/home/nillynil/repos/odin-recipes/recipes/AvocadoChocolatePudding.html" target="_blank" rel="noopener noreferrer">Avocado Chocolate Pudding</a>
   <br>
-  <a href="/home/nillynil/repos/odin-recipes/recipes/LemonCheesecakeOats.html">Lemon Cheesecake Oats</a>
+  <a href="/home/nillynil/repos/odin-recipes/recipes/LemonCheesecakeOats.html" target="_blank" rel="noopener noreferrer">Lemon Cheesecake Oats</a>
   <br>
-  <a href="/home/nillynil/repos/odin-recipes/recipes/ChocolateBar.html">Chocolate Bar</a>
+  <a href="/home/nillynil/repos/odin-recipes/recipes/ChocolateBar.html" target="_blank" rel="noopener noreferrer">Chocolate Bar</a>
 </body>
 </html>
