Start styling by adding style.css

--- a/index.html
+++ b/index.html
@@ -6,19 +6,25 @@
 
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Desserts For Andrey</title>
+  <title>Desserts For Odin Devs</title>
+  <link rel="stylesheet" href="style.css">
 
 </head>
 
 <body>
 
-  <h1>Desserts For Odin Developers</h1>
+  <h1>Desserts For Odin Devs</h1>
 
-  <p><h3>But especially for <em>Andrey</em>...</h3>
-    ...who has inspired me to become a <em>developer</em> to be closer to his world, his mind.</p>
-  <p>We <em>all</em> have <em>sweet</em> cravings. But the sedentary worklife of developers makes refined sugar our enemy!</p>
-  <p>I hope these no-refined sugar, natural ingredient and easy-to-make deserts will be useful to the computing tribe!</p>
-  <a href="/home/nillynil/repos/odin-recipes/recipes/LemonNiceCream.html" target="_blank" rel="noopener noreferrer">Lemon Nice-Cream</a>
+  <p>We <em>all</em> have sweet cravings. Unfortunately, the sedentary worklife of developers makes refined sugar 'the enemy'!</p>
+  <p>But these no-refined sugar, natural ingredient, easy-to-make desserts below are healthy alternatives.</p>
+  <p>Now dear computing tribe, choose your healthy sweet snack!</p>
+
+  <div class="menu">
+    <div class="lemon-nice">
+        <<img src="/home/nillynil/repos/odin-recipes/images/LemonNiceCream.jpg" width="200" height="200">
+
+        <a href="/home/nillynil/repos/odin-recipes/recipes/LemonNiceCream.html" target="_blank" rel="noopener noreferrer">Lemon Nice-Cream</a>
+    </div>
   <br>
   <a href="/home/nillynil/repos/odin-recipes/recipes/StrawberryNiceCream.html" target="_blank" rel="noopener noreferrer">Strawberry Nice-Cream</a>
   <br>
@@ -27,5 +33,6 @@
   <a href="/home/nillynil/repos/odin-recipes/recipes/LemonCheesecakeOats.html" target="_blank" rel="noopener noreferrer">Lemon Cheesecake Oats</a>
   <br>
   <a href="/home/nillynil/repos/odin-recipes/recipes/ChocolateBar.html" target="_blank" rel="noopener noreferrer">Chocolate Bar</a>
+</div>
 </body>
 </html>
