--- a/recipes/AvocadoChocolatePudding.html
+++ b/recipes/AvocadoChocolatePudding.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Avocado Chocolate Pudding</title>
+    <link rel="stylesheet" href="/home/nillynil/repos/odin-recipes/style.css">
 </head>
 <body>
     <h1>Avocado Chocolate Pudding</h1>
@@ -12,7 +13,7 @@
         <p>Avocado in a dessert? You will be pleasantly surprised 😍...You can play around with the quantities of the ingredients to your preference!</p>
         <h3>Ingredients</h3>
         <ul>
-            <li>2 very ripe and soft avocados</li>
+            <li>2 ripe avocados</li>
             <li>1/2 cup cocoa powder</li>
             <li>100g dark chocolate, melted</li>
             <li>1/2 cup maple syrup (or honey...or 2-4 pitted dried dates)</li>
