--- a/recipes/LemonNiceCream.html
+++ b/recipes/LemonNiceCream.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lemon Nice-Cream</title>
+    <link rel="stylesheet" href="/home/nillynil/repos/odin-recipes/style.css">
 </head>
 <body>
     <h1>Lemon Nice-Cream</h1>
