Add images to index.html. Add 'alt' text to images.

--- a/recipes/AvocadoChocolatePudding.html
+++ b/recipes/AvocadoChocolatePudding.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>Avocado Chocolate Pudding</h1>
-    <img src="/home/nillynil/repos/odin-recipes/images/AvocadoChocolatePudding.jpg" width="300" height="300">
+    <img src="/home/nillynil/repos/odin-recipes/images/AvocadoChocolatePudding.jpg" width="200" height="200" alt="Avocado Chocolate Pudding">
     <h3>Description</h3>
         <p>Avocado in a dessert? You will be pleasantly surprised 😍...You can play around with the quantities of the ingredients to your preference!</p>
         <h3>Ingredients</h3>
