--- a/recipes/ChocolateBar.html
+++ b/recipes/ChocolateBar.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>Chocolate Bar</h1>
-    <img src="/home/nillynil/repos/odin-recipes/images/ChocolateBar.jpg" width="300" height="300">
+    <img src="/home/nillynil/repos/odin-recipes/images/ChocolateBar.jpg" width="200" height="200" alt="Chocolate Bar">
     <h3>Description</h3>
         <p> Energy bar with intense cocoa! As a pre-workout or a coffee snack!</p>
         <h3>Ingredients</h3>
