--- a/recipes/LemonCheesecakeOats.html
+++ b/recipes/LemonCheesecakeOats.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>Lemon Cheesecake Oats</h1>
-    <img src="/home/nillynil/repos/odin-recipes/images/LemonCheesecakeOats.jpg" width="300" height="300">
+    <img src="/home/nillynil/repos/odin-recipes/images/LemonCheesecakeOats.jpg" width="200" height="200" alt="Lemon Cheesecake Oats">
     <h3>Description</h3>
         <p>Unexpected deliciousness! Oats with lemon cheesecake flavor... As a breakfast, for the office lunch bag or as a five o'clock tea snack!</p>
         <h3>Ingredients</h3>
