--- a/recipes/LemonNiceCream.html
+++ b/recipes/LemonNiceCream.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>Lemon Nice-Cream</h1>
-    <img src="/home/nillynil/repos/odin-recipes/images/LemonNiceCream.jpg" width="300" height="300">
+    <img src="/home/nillynil/repos/odin-recipes/images/LemonNiceCream.jpg" width="200" height="200" alt="Lemon Nice Cream">
     <h3>Description</h3>
     <p>Experience the 'Lemon High'...and code better after getting energized by this lemon nice-cream.</p>
     <h3>Ingredients</h3>
