--- a/recipes/StrawberryNiceCream.html
+++ b/recipes/StrawberryNiceCream.html
@@ -8,7 +8,7 @@
     </head>
     <body>
         <h1>Strawberry Nice-Cream</h1>
-        <img src="/home/nillynil/repos/odin-recipes/images/StrawberryNiceCream.jpg" width="300" height="300">
+        <img src="/home/nillynil/repos/odin-recipes/images/StrawberryNiceCream.jpg" width="200" height="200" alt="Strawberry Nice Cream">
         <h3>Description</h3>
         <p>Make your own homemade strawberry nice-cream with just 3 ingredients!</p>
         <h3>Ingredients</h3>
