Change absolute paths to relative paths for image and page links to work in GitHub Pages

--- a/recipes/LemonNiceCream.html
+++ b/recipes/LemonNiceCream.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lemon Nice-Cream</title>
-    <link rel="stylesheet" href="/home/nillynil/repos/odin-recipes/style.css">
+    <link rel="stylesheet" href="../style.css">
 </head>
 <body>
     <h1>Lemon Nice-Cream</h1>
-    <img src="/home/nillynil/repos/odin-recipes/images/LemonNiceCream.jpg" width="200" height="200" alt="Lemon Nice Cream">
+    <img src="../images/LemonNiceCream.jpg" width="200" height="200" alt="Lemon Nice Cream">
     <h3>Description</h3>
     <p>Experience the 'Lemon High'...and code better after getting energized by this lemon nice-cream.</p>
     <h3>Ingredients</h3>
