--- a/recipes/AvocadoChocolatePudding.html
+++ b/recipes/AvocadoChocolatePudding.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Avocado Chocolate Pudding</title>
-    <link rel="stylesheet" href="/home/nillynil/repos/odin-recipes/style.css">
+    <link rel="stylesheet" href="../style.css">
 </head>
 <body>
     <h1>Avocado Chocolate Pudding</h1>
-    <img src="/home/nillynil/repos/odin-recipes/images/AvocadoChocolatePudding.jpg" width="200" height="200" alt="Avocado Chocolate Pudding">
+    <img src="../images/AvocadoChocolatePudding.jpg" width="200" height="200" alt="Avocado Chocolate Pudding">
     <h3>Description</h3>
         <p>Avocado in a dessert? You will be pleasantly surprised 😍...You can play around with the quantities of the ingredients to your preference!</p>
         <h3>Ingredients</h3>
