--- a/recipes/ChocolateBar.html
+++ b/recipes/ChocolateBar.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Chocolate Bar</title>
-    <link rel="stylesheet" href="/home/nillynil/repos/odin-recipes/style.css">
+    <link rel="stylesheet" href="../style.css">
 </head>
 <body>
     <h1>Chocolate Bar</h1>
-    <img src="/home/nillynil/repos/odin-recipes/images/ChocolateBar.jpg" width="200" height="200" alt="Chocolate Bar">
+    <img src="../images/ChocolateBar.jpg" width="200" height="200" alt="Chocolate Bar">
     <h3>Description</h3>
         <p> Energy bar with intense cocoa! As a pre-workout or a coffee snack!</p>
         <h3>Ingredients</h3>
