--- a/recipes/LemonCheesecakeOats.html
+++ b/recipes/LemonCheesecakeOats.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lemon Cheesecake Oats</title>
-    <link rel="stylesheet" href="/home/nillynil/repos/odin-recipes/style.css">
+    <link rel="stylesheet" href="../style.css">
 </head>
 <body>
     <h1>Lemon Cheesecake Oats</h1>
-    <img src="/home/nillynil/repos/odin-recipes/images/LemonCheesecakeOats.jpg" width="200" height="200" alt="Lemon Cheesecake Oats">
+    <img src="../images/LemonCheesecakeOats.jpg" width="200" height="200" alt="Lemon Cheesecake Oats">
     <h3>Description</h3>
         <p>Unexpected deliciousness! Oats with lemon cheesecake flavor... As a breakfast, for the office lunch bag or as a five o'clock tea snack!</p>
         <h3>Ingredients</h3>
