--- a/recipes/StrawberryNiceCream.html
+++ b/recipes/StrawberryNiceCream.html
@@ -4,11 +4,11 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Strawberry Nice-Cream</title>
-        <link rel="stylesheet" href="/home/nillynil/repos/odin-recipes/style.css">
+        <link rel="stylesheet" href="../style.css">
     </head>
     <body>
         <h1>Strawberry Nice-Cream</h1>
-        <img src="/home/nillynil/repos/odin-recipes/images/StrawberryNiceCream.jpg" width="200" height="200" alt="Strawberry Nice Cream">
+        <img src="../images/StrawberryNiceCream.jpg" width="200" height="200" alt="Strawberry Nice Cream">
         <h3>Description</h3>
         <p>Make your own homemade strawberry nice-cream with just 3 ingredients!</p>
         <h3>Ingredients</h3>
